@@ -21,22 +21,33 @@
 
 package cascading.pipe.cogroup;
 
-import java.util.Iterator;
-
 import cascading.flow.FlowProcess;
+import cascading.flow.hadoop.HadoopFlowProcess;
 import cascading.tuple.Fields;
 import cascading.tuple.IndexTuple;
 import cascading.tuple.SpillableTupleList;
 import cascading.tuple.Tuple;
+import org.apache.hadoop.io.compress.CompressionCodec;
+import org.apache.hadoop.util.ReflectionUtils;
 import org.apache.log4j.Logger;
+
+import java.util.Iterator;
 
 /**
  * Class CoGroupClosure is used internally to represent co-grouping results of multiple tuple streams.
+ * <p/>
+ * <p/>
+ * "org.apache.hadoop.io.compress.LzoCodec,org.apache.hadoop.io.compress.GzipCodec,org.apache.hadoop.io.compress.DefaultCodec"
  */
 public class CoGroupClosure extends GroupClosure
   {
   public static final String SPILL_THRESHOLD = "cascading.cogroup.spill.threshold";
   private static final int defaultThreshold = 10 * 1000;
+
+  public static final String SPILL_COMPRESS = "cascading.cogroup.spill.compress";
+
+  public static final String SPILL_CODECS = "cascading.cogroup.spill.codecs";
+  private static final String defaultCodecs = "org.apache.hadoop.io.compress.GzipCodec,org.apache.hadoop.io.compress.DefaultCodec";
 
   /** Field LOG */
   private static final Logger LOG = Logger.getLogger( CoGroupClosure.class );
@@ -76,7 +87,12 @@ public class CoGroupClosure extends GroupClosure
     groups = new SpillableTupleList[Math.max( numPipes, numSelfJoins + 1 )];
 
     for( int i = 0; i < numPipes; i++ ) // use numPipes not repeat, see below
-      groups[ i ] = new SpillableTupleList( getLong( flowProcess, SPILL_THRESHOLD, defaultThreshold ) );
+      {
+      long threshold = getLong( flowProcess, SPILL_THRESHOLD, defaultThreshold );
+      CompressionCodec codec = getCompressionCodec( flowProcess );
+
+      groups[ i ] = new SpillableTupleList( threshold, codec );
+      }
 
     while( values.hasNext() )
       {
@@ -106,5 +122,40 @@ public class CoGroupClosure extends GroupClosure
       return defaultValue;
 
     return Long.parseLong( value );
+    }
+
+  public CompressionCodec getCompressionCodec( FlowProcess flowProcess )
+    {
+    String compress = (String) flowProcess.getProperty( SPILL_COMPRESS );
+
+    if( compress != null && !Boolean.parseBoolean( compress ) )
+      return null;
+
+    String codecs = (String) flowProcess.getProperty( SPILL_CODECS );
+
+    if( codecs == null || codecs.length() == 0 )
+      codecs = defaultCodecs;
+
+    Class<? extends CompressionCodec> codecClass = null;
+
+    for( String codec : codecs.split( "[,\\s]*" ) )
+      {
+      try
+        {
+        codecClass = Thread.currentThread().getContextClassLoader().loadClass( codec ).asSubclass( CompressionCodec.class );
+        }
+      catch( ClassNotFoundException exception )
+        {
+        // do nothing
+        }
+      }
+
+    if( codecClass == null )
+      {
+      LOG.warn( "codecs set, but unable to load any: " + codecs );
+      return null;
+      }
+
+    return ReflectionUtils.newInstance( codecClass, ( (HadoopFlowProcess) flowProcess ).getJobConf() );
     }
   }
