@@ -21,10 +21,14 @@
 
 package cascading.tuple;
 
-import java.util.Iterator;
-
 import cascading.CascadingTestCase;
 import org.apache.hadoop.io.Text;
+import org.apache.hadoop.io.compress.CompressionCodec;
+import org.apache.hadoop.io.compress.GzipCodec;
+import org.apache.hadoop.mapred.JobConf;
+import org.apache.hadoop.util.ReflectionUtils;
+
+import java.util.Iterator;
 
 /**
  *
@@ -40,20 +44,37 @@ public class SpillableTupleTest extends CascadingTestCase
     {
     long time = System.currentTimeMillis();
 
-    performSpillTest( 5, 50 );
-    performSpillTest( 49, 50 );
-    performSpillTest( 50, 50 );
-    performSpillTest( 51, 50 );
-    performSpillTest( 499, 50 );
-    performSpillTest( 500, 50 );
-    performSpillTest( 501, 50 );
+    performSpillTest( 5, 50, null );
+    performSpillTest( 49, 50, null );
+    performSpillTest( 50, 50, null );
+    performSpillTest( 51, 50, null );
+    performSpillTest( 499, 50, null );
+    performSpillTest( 500, 50, null );
+    performSpillTest( 501, 50, null );
 
     System.out.println( "time = " + ( System.currentTimeMillis() - time ) );
     }
 
-  private void performSpillTest( int size, int threshold )
+  public void testSpillCompressed()
     {
-    SpillableTupleList list = new SpillableTupleList( threshold );
+    GzipCodec codec = ReflectionUtils.newInstance( GzipCodec.class, new JobConf() );
+
+    long time = System.currentTimeMillis();
+
+    performSpillTest( 5, 50, codec );
+    performSpillTest( 49, 50, codec );
+    performSpillTest( 50, 50, codec );
+    performSpillTest( 51, 50, codec );
+    performSpillTest( 499, 50, codec );
+    performSpillTest( 500, 50, codec );
+    performSpillTest( 501, 50, codec );
+
+    System.out.println( "time = " + ( System.currentTimeMillis() - time ) );
+    }
+
+  private void performSpillTest( int size, int threshold, CompressionCodec codec )
+    {
+    SpillableTupleList list = new SpillableTupleList( threshold, codec );
 
     for( int i = 0; i < size; i++ )
       {
